--- a/src/main/java/com/jovaniel/View/Program.form
+++ b/src/main/java/com/jovaniel/View/Program.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.jova.View.MainPanelClass">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.jovaniel.View.MainPanelClass">
   <grid id="27dc6" binding="mainPanel" layout-manager="CardLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
